--- a/Kapadiaamir/frontend/index.html
+++ b/Kapadiaamir/frontend/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>- Start Bootstrap Theme</title>
+    <title>Kapadia Amir</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -41,7 +41,7 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand page-scroll" href="#page-top">
-                    <i class="fa fa-play-circle"></i>  <span class="light">Start</span> Bootstrap
+                    <i class="fa fa-play-circle"></i>  <span class="light">Amir</span> Kapadia
                 </a>
             </div>
 
@@ -53,10 +53,10 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">About</a>
+                        <a class="page-scroll" href="#about">I Am</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#download">Download</a>
+                        <a class="page-scroll" href="#download">Projects</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#contact">Contact</a>
@@ -74,8 +74,8 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 col-md-offset-2">
-                        <h1 class="brand-heading">Grayscale</h1>
-                        <p class="intro-text">A free, responsive, one page Bootstrap theme.<br>Created by Start Bootstrap.</p>
+                        <h1 class="brand-heading">Amir Kapadia</h1>
+                        <p class="intro-text">Aspiring Comp Sci major who loves to build random things</p>
                         <a href="#about" class="btn btn-circle page-scroll">
                             <i class="fa fa-angle-double-down animated"></i>
                         </a>
@@ -89,10 +89,8 @@
     <section id="about" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>About Grayscale</h2>
-                <p>Grayscale is a free Bootstrap 3 theme created by Start Bootstrap. It can be yours right now, simply download the template on <a href="http://startbootstrap.com/template-overviews/grayscale/">the preview page</a>. The theme is open source, and you can use it for any purpose, personal or commercial.</p>
-                <p>This theme features stock photos by <a href="http://gratisography.com/">Gratisography</a> along with a custom Google Maps skin courtesy of <a href="http://snazzymaps.com/">Snazzy Maps</a>.</p>
-                <p>Grayscale includes full HTML, CSS, and custom JavaScript files along with LESS files for easy customization.</p>
+                <h2>I am</h2>
+                <p>I'm a 19 year old kid, who is currently working toward a B.Sci degree at Rutgers University and maybe a minor in Econ, but we shall see about that. I was born and raised in the upper part of New Jersey in a little town called Elmwood Park. It is hands down the most boring town, probably, in the world; however, the town has personaility, and I love it. Anyways, I grew up with one other sibling and multiple cousins, who all influenced my life in a major way. However, my brother is the reason I got into Computer Science and I can not thank him enough for showing me this whole new world. A link to his funny website can be found here at --> <a href="http://mushaheedkapadia.com/">MushaheedKapadia.com</a>.</p>
             </div>
         </div>
     </section>
@@ -102,9 +100,9 @@
         <div class="download-section">
             <div class="container">
                 <div class="col-lg-8 col-lg-offset-2">
-                    <h2>Download Grayscale</h2>
-                    <p>You can download Grayscale for free on the preview page at Start Bootstrap.</p>
-                    <a href="http://startbootstrap.com/template-overviews/grayscale/" class="btn btn-default btn-lg">Visit Download Page</a>
+                    <h2>Link to the website that I am currently working on with some friends!</h2>
+                    <p>It is a little website called Haloworld, and it is Halo by the fans for the fans.</p>
+                    <a href="http://haloworld.xyz/" class="btn btn-default btn-lg">Visit Haloworld</a>
                 </div>
             </div>
         </div>
