--- a/Kapadiaamir/frontend/index.html
+++ b/Kapadiaamir/frontend/index.html
@@ -90,7 +90,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>I am</h2>
-                <p>I'm a 19 year old kid, who is currently working toward a B.Sci degree at Rutgers University and maybe a minor in Econ, but we shall see about that. I was born and raised in the upper part of New Jersey in a little town called Elmwood Park. It is hands down the most boring town, probably, in the world; however, the town has personaility, and I love it. Anyways, I grew up with one other sibling and multiple cousins, who all influenced my life in a major way. However, my brother is the reason I got into Computer Science and I can not thank him enough for showing me this whole new world. A link to his funny website can be found here at --> <a href="http://mushaheedkapadia.com/">MushaheedKapadia.com</a>.</p>
+                <p>I'm a 19 year old kid, who is currently working toward a B.Sci degree at Rutgers University and maybe a minor in Econ, but we shall see about that. I was born and raised in the upper part of New Jersey in a little town called Elmwood Park. It is hands down the most boring town, probably, in the world; however, the town has personaility, and I love it. Anyways, I grew up with one other sibling and multiple cousins, who all influenced my life in a major way. However, my brother is the reason I got into Computer Science and I can not thank him enough for showing me this whole new world. A link to his funny website can be found here at --> <a href="http://mushaheedkapadia.com/">MushaheedKapadia.com</a></p>
             </div>
         </div>
     </section>
@@ -113,18 +113,18 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contact Start Bootstrap</h2>
-                <p>Feel free to email us to provide some feedback on our templates, give us suggestions for new templates and themes, or to just say hello!</p>
-                <p><a href="mailto:feedback@startbootstrap.com">feedback@startbootstrap.com</a>
+                <p>Feel free to contact me through on Facebook,  LinkedIn or even just plain email!</p>
+                <p><a href="mailto:kapaim85@gmail.com">kapim85@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
                     <li>
-                        <a href="https://twitter.com/SBootstrap" class="btn btn-default btn-lg"><i class="fa fa-twitter fa-fw"></i> <span class="network-name">Twitter</span></a>
+                        <a href="https://www.facebook.com/kapadiaamir" class="btn btn-default btn-lg"><span class="network-name">Facebook</span></a>
                     </li>
                     <li>
-                        <a href="https://github.com/IronSummitMedia/startbootstrap" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
+                        <a href="https://github.com/kapadiaamir" class="btn btn-default btn-lg"><span class="network-name">Github</span></a>
                     </li>
                     <li>
-                        <a href="https://plus.google.com/+Startbootstrap/posts" class="btn btn-default btn-lg"><i class="fa fa-google-plus fa-fw"></i> <span class="network-name">Google+</span></a>
+                        <a href="https://www.linkedin.com/in/amir-kapadia-aa54a6114?trk=hp-identity-name" class="btn btn-default btn-lg"><span class="network-name">LinkedIn</span></a>
                     </li>
                 </ul>
             </div>
