--- a/Kapadiaamir/frontend/index.html
+++ b/Kapadiaamir/frontend/index.html
@@ -112,7 +112,7 @@
     <section id="contact" class="container content-section text-center">
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                <h2>Contact Start Bootstrap</h2>
+                <h2>Contact Me</h2>
                 <p>Feel free to contact me through on Facebook,  LinkedIn or even just plain email!</p>
                 <p><a href="mailto:kapaim85@gmail.com">kapim85@gmail.com</a>
                 </p>
@@ -135,11 +135,6 @@
     <div id="map"></div>
 
     <!-- Footer -->
-    <footer>
-        <div class="container text-center">
-            <p>Copyright &copy; Your Website 2014</p>
-        </div>
-    </footer>
 
     <!-- jQuery -->
     <script src="js/jquery.js"></script>
